test/sema/initialize-non-null-pointer-with-nullable-pointer.delta.output
initialize-non-null-pointer-with-nullable-pointer.delta:7:17: error: cannot assign 'int*?' to 'int*'
    int* f = foo();
                ^
