test/sema/initialize-non-null-pointer-with-nullable-pointer.delta
// RUN: %check_errors %not %delta -typecheck %s

extern int*? foo();

void main() {
    // CHECK: [[@LINE+1]]:17: error: cannot assign 'int*?' to 'int*'
    int* f = foo();
}
